add selafin wind notebook

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <li><a href="https://pmav99.github.io/static/ERA5-meluxina.html">ERA5-meluxina.html</a></li>
             <li><a href="https://tomsail.github.io/static/Validation_Protocol.html">Validation_Protocol.html</a></li>
             <li><a href="https://tomsail.github.io/static/Taylor_Diagram.html">Taylor_Diagram.html</a></li>
+            <li><a href="https://tomsail.github.io/static/create_selafin_wind.html">Create_Selafin_Wind.html</a></li>
         </ul>
     </div>
 
