added cf convention notebook

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <input type="text" id="searchInput" placeholder="Type to filter URLs..." onkeyup="filterURLs()">
     <div id="urlContainer">
         <ul id="urlList">
+            <li><a href="https://tomsail.github.io/static/cf_attrs.html">CF_Convention.html</a></li>
             <li><a href="https://tomsail.github.io/static/Meteo_Chunks.v1.html">Meteo_Chunks.v1.html</a></li>
             <li><a href="https://pmav99.github.io/static/CFL-schism.html">CFL-schism.html</a></li>
             <li><a href="https://tomsail.github.io/static/CFL-TELEMAC.html">CFL-TELEMAC.html</a></li>
