added model metrics

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <div id="urlContainer">
         <ul id="urlList">
             <li><a href="https://tomsail.github.io/static/renumber.html">Mesh_Renumbering</a></li>
+            <li><a href="https://tomsail.github.io/static/Model_metrics.html">Model_metrics</a></li>
             <li><a href="https://tomsail.github.io/static/cf_attrs.html">CF_Convention</a></li>
             <li><a href="https://tomsail.github.io/static/Meteo_Chunks.v1.html">Meteo_Chunks.v1</a></li>
             <li><a href="https://pmav99.github.io/static/CFL-schism.html">CFL-schism</a></li>
