add IOC STOFS2D notebook

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <input type="text" id="searchInput" placeholder="Type to filter URLs..." onkeyup="filterURLs()">
     <div id="urlContainer">
         <ul id="urlList">
+            <li><a href="https://tomsail.github.io/static/Observations_IOC_STOFS.html">Gather observations from IOC database and STOFS 2D outputs locations</a></li>
             <li><a href="https://tomsail.github.io/static/Iceland.html">Iceland_Mesh_and_Model_Restart</a></li>
             <li><a href="https://tomsail.github.io/static/renumber.html">Mesh_Renumbering</a></li>
             <li><a href="https://tomsail.github.io/static/Model_metrics.html">Model_metrics</a></li>
