--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <input type="text" id="searchInput" placeholder="Type to filter URLs..." onkeyup="filterURLs()">
     <div id="urlContainer">
         <ul id="urlList">
-            <li><a href="https://tomsail.github.io/static/analyse_wac_t3d.html.html">Custom branch TELEMAC + xarray selafin demo</a></li>
+            <li><a href="https://tomsail.github.io/static/analyse_wac_t3d.html">Custom branch TELEMAC + xarray selafin demo</a></li>
             <li><a href="https://tomsail.github.io/static/explore_WebCritech.html">inspect data availability for TG stations stored on WebCritech</a></li>
             <li><a href="https://tomsail.github.io/static/IOC_in_STOFS.html">extract IOC station from STOFS 2D outputs locations</a></li>
             <li><a href="https://tomsail.github.io/static/Observations_IOC_STOFS.html">Gather observations from IOC database and STOFS 2D outputs locations</a></li>
