add panel mesh edit

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
     <input type="text" id="searchInput" placeholder="Type to filter URLs..." onkeyup="filterURLs()">
     <div id="urlContainer">
         <ul id="urlList">
+            <li><a href="https://tomsail.github.io/static/holoviews_mesh_edit.html">Mesh editing using panel dashboarding</a></li>
             <li><a href="https://tomsail.github.io/static/extract_CMEMS_ioc_cleanup.html">Extract surge from CMEMS (Global Ocean Physics Analysis and Forecast) model</a></li>
             <li><a href="https://tomsail.github.io/static/analyse_wac_t3d.html">Custom branch TELEMAC + xarray selafin demo</a></li>
-            <li><a href="https://tomsail.github.io/static/explore_WebCritech.html">inspect data availability for TG stations stored on WebCritech</a></li>
+            <li><a href="https://tomsail.github.io/static/explore_WebCritech.html">Analysis of the data availability for the data stored on WebCritech</a></li>
             <li><a href="https://tomsail.github.io/static/IOC_in_STOFS.html">extract IOC station from STOFS 1D outputs locations</a></li>
-            <li><a href="https://tomsail.github.io/static/best_candidates_ioc.html">add more IOC stations from STOFS 1D outputs locations </a></li>
+            <li><a href="https://tomsail.github.io/static/best_candidates_ioc.html">Skill assessment protocol (2025) - Find the best IOC stations for validation </a></li>
             <li><a href="https://tomsail.github.io/static/Observations_IOC_STOFS.html">Gather observations from IOC database and STOFS 2D outputs locations</a></li>
             <li><a href="https://tomsail.github.io/static/Iceland.html">Iceland_Mesh_and_Model_Restart</a></li>
             <li><a href="https://tomsail.github.io/static/renumber.html">Mesh_Renumbering</a></li>
