--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <input type="text" id="searchInput" placeholder="Type to filter URLs..." onkeyup="filterURLs()">
     <div id="urlContainer">
         <ul id="urlList">
+            <li><a href="https://tomsail.github.io/static/bathy_gradient.html">Bathy Gradient Sensitivity</a></li>
             <li><a href="https://tomsail.github.io/static/holoviews_mesh_edit.html">Mesh editing using panel dashboarding</a></li>
             <li><a href="https://tomsail.github.io/static/extract_CMEMS_ioc_cleanup.html">Extract surge from CMEMS (Global Ocean Physics Analysis and Forecast) model</a></li>
             <li><a href="https://tomsail.github.io/static/analyse_wac_t3d.html">Custom branch TELEMAC + xarray selafin demo</a></li>
