--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <li><a href="https://tomsail.github.io/static/Validation_Protocol.html">Validation_Protocol</a></li>
             <li><a href="https://tomsail.github.io/static/Taylor_Diagram.html">Taylor_Diagram</a></li>
             <li><a href="https://tomsail.github.io/static/create_selafin_wind.html">Create_Selafin_Wind</a></li>
+            <li><a href="https://tomsail.github.io/static/compare_TS.html">Methods for comparing time series</a></li>
         </ul>
     </div>
 
