add africa stations

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <li><a href="https://tomsail.github.io/static/Taylor_Diagram.html">Taylor_Diagram</a></li>
             <li><a href="https://tomsail.github.io/static/create_selafin_wind.html">Create_Selafin_Wind</a></li>
             <li><a href="https://tomsail.github.io/static/compare_TS.html">Methods for comparing time series</a></li>
+            <li><a href="https://tomsail.github.io/static/test_africa_stations.html">Visualise station in Africa and extract tidal data</a></li>
         </ul>
     </div>
 
