added pytides vs utide

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <li><a href="https://tomsail.github.io/static/Observations_IOC_STOFS.html">Gather observations from IOC database and STOFS 2D outputs locations</a></li>
             <li><a href="https://tomsail.github.io/static/test_africa_stations.html">Visualise station in Africa and extract tidal data</a></li>
             <li><a href="https://tomsail.github.io/static/IOC_in_STOFS.html">extract IOC station from STOFS 1D outputs locations</a></li>
+            <li><a href="https://tomsail.github.io/static/pytides_vs_utides.html">Compare de-tiding methods (UTide vs pytides)</a></li>
         </ul>
 
         <!-- Model Forcing / Extraction -->
