--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
             <li><a href="https://tomsail.github.io/static/analyse_wac_t3d.html">Custom branch TELEMAC + xarray selafin demo</a></li>
             <li><a href="https://tomsail.github.io/static/explore_WebCritech.html">Analysis of the data availability for the data stored on WebCritech</a></li>
         </ul>
+        <!-- GLOBCOAST -->
+        <h3>GLOBCOAST</h3>
+        <ul class="urlList">
+            <li><a href="https://tomsail.github.io/static/150125_CLEANED_GLOBCOAST_tomsail.html">GLOBCOAST Notebook</a></li>
+        </ul>
     </div>
 
     <script>
