--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
             <li><a href="https://tomsail.github.io/static/Observations_IOC_STOFS.html">Gather observations from IOC database and STOFS 2D outputs locations</a></li>
             <li><a href="https://tomsail.github.io/static/test_africa_stations.html">Visualise station in Africa and extract tidal data</a></li>
             <li><a href="https://tomsail.github.io/static/IOC_in_STOFS.html">extract IOC station from STOFS 1D outputs locations</a></li>
-            <li><a href="https://tomsail.github.io/static/pytides_vs_utides.html">Compare de-tiding methods (UTide vs pytides)</a></li>
         </ul>
 
         <!-- Model Forcing / Extraction -->
@@ -94,6 +93,13 @@
             <li><a href="https://tomsail.github.io/static/CFL-TELEMAC.html">CFL-TELEMAC</a></li>
         </ul>
 
+        <!-- Tides -->
+        <h3>Tidal analysis</h3>
+        <ul class="urlList">
+            <li><a href="https://tomsail.github.io/static/compute_tide_map_meluxina.html">Extract tidal harmonics on 2D unstrucred mesh using dask</a></li>
+            <li><a href="https://tomsail.github.io/static/pytides_vs_utides.html">Compare de-tiding methods (UTide vs pytides)</a></li>
+        </ul>
+
         <!-- Other / General Analysis -->
         <h3>Other / General Analysis</h3>
         <ul class="urlList">
@@ -101,6 +107,7 @@
             <li><a href="https://tomsail.github.io/static/analyse_wac_t3d.html">Custom branch TELEMAC + xarray selafin demo</a></li>
             <li><a href="https://tomsail.github.io/static/explore_WebCritech.html">Analysis of the data availability for the data stored on WebCritech</a></li>
         </ul>
+
         <!-- GLOBCOAST -->
         <h3>GLOBCOAST</h3>
         <ul class="urlList">
