add global tomawac

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <!-- Meshing -->
         <h3>Meshing</h3>
         <ul class="urlList">
+            <li><a href="https://tomsail.github.io/static/mesh_tomawac.html">Generate a mesh and run a global TOMAWAC simulation</a></li>
             <li><a href="https://tomsail.github.io/static/holoviews_mesh_edit.html">Mesh editing using panel dashboarding</a></li>
             <li><a href="https://tomsail.github.io/static/Iceland.html">Iceland Mesh and Model Restart</a></li>
             <li><a href="https://tomsail.github.io/static/renumber.html">Mesh Renumbering</a></li>
