add max_Hm0 image

--- a/mesh_tomawac.html
+++ b/mesh_tomawac.html
@@ -7545,7 +7545,7 @@ a.anchor-link {
 <li>Interpolate ERA5 wind data onto the mesh</li>
 <li>Convert to wind Selafin binary</li>
 <li>Visualise TOMAWAC results directly in the notebook:
-<img alt="WAC_global" src="assets/max_Hm0_TOMAWAC.png"/></li>
+<img alt="WAC_global" src="./assets/max_Hm0_TOMAWAC.png"/></li>
 </ol>
 <h2 id="1---Generate-the-mesh">1 - Generate the mesh<a class="anchor-link" href="#1---Generate-the-mesh">¶</a></h2><h3 id="Particularities-of-the-meshes-available-in-the-mesh/-folder:">Particularities of the meshes available in the <code>mesh/</code> folder:<a class="anchor-link" href="#Particularities-of-the-meshes-available-in-the-mesh/-folder:">¶</a></h3><ol>
 <li>For TOMAWAC simulations, I needed to add a hole in the pole. Only because of the triangle(s) that contain the pole (bug in routine <code>GEOELT.f</code>).</li>
