--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <!-- Time Series / Observations -->
         <h3>Time Series / Observations</h3>
         <ul class="urlList">
+            <li><a href="https://tomsail.github.io/static/typhoon_forensic_analysis.html">Analysis of the storm surge on IOC tide gauges for Typhoon FUNG WONG</a></li>
             <li><a href="https://tomsail.github.io/static/IOC_storms_attrib.html">Distribution of recorded storms on IOC tide gauges</a></li>
             <li><a href="https://tomsail.github.io/static/compare_TS.html">Methods for comparing time series</a></li>
             <li><a href="https://tomsail.github.io/static/Observations_IOC_STOFS.html">Gather observations from IOC database and STOFS 2D outputs locations</a></li>
